fix: prevent button text wrapping

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -9,9 +9,13 @@
     font-size: 1.6rem;
     font-weight: 600;
     height: 5.1rem;
+    height: 4.6rem;
     letter-spacing: 0.25rem;
+    overflow: hidden;
     padding: 1.2rem 3rem;
+    text-overflow: ellipsis;
     text-transform: uppercase;
+    white-space: nowrap;
 
     &:hover {
         opacity: 0.95;
